--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MAT-TRANS</title>
+    <title>МАТ-ТРАНС</title>
+    <meta
+      name="description"
+      content="МАТ-ТРАНС нуди сигурен секојдневен превоз помеѓу Берово и Скопје, со дополнителни услуги како групен превоз, свадби и приватни настани."
+    />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
