--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>МАТ-ТРАНС</title>
+    <title>МАТ-ТРАНС | Редовен превоз Берово - Скопје</title>
     <meta
       name="description"
       content="МАТ-ТРАНС нуди сигурен секојдневен превоз помеѓу Берово и Скопје, со дополнителни услуги како групен превоз, свадби и приватни настани."
